# optimizer-worker

./: .dockerignore  .env-template  .env.template  .gitignore  .gitmodules  Dockerfile  Dockerfile-local  README.md  dev-requirements.txt  dev.Dockerfile  docker-compose.worker-only.dev.yml  docker-compose.worker-only.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt  run.bat  run.sh  run_test.sh  run_windows.sh  start_stop_daemon.py  test.py  test_run_optimizer.py  test_run_optimizer.sh
.github/workflows/: ci.yml  publish_container_image.yml
ci/: _load_dot_env.sh  install_dependencies.sh  install_dev_sdk.sh  update_dependencies.sh
ci/linux/: create_venv.sh  lint.sh  typecheck.sh
ci/win32/: create_venv.cmd  lint.cmd  typecheck.cmd
local_test/: Delft_T feedback.esdl  Delft_T.esdl  Dockerfile  optimizer_poc_tutorial_feedback_error.esdl  requirements.txt  run_optimizer_flow_function.py  test_app.py
src/: env.py  esdl_messages.py  prefect_deploy_flow.py  prefect_flow.py  prefect_get_flow_run_result.py  prefect_start_optimizer_run.py  prefect_util.py  worker_types.py
src/grow_runner/: run_grow.py  types.py
src/grow_worker/: __init__.py  celery.sh  env.py  esdl_messages.py  log_forwarding.py  prefect_util.py  task_util.py  types.py  worker.py  worker_types.py
src/optimization_runner/: run_optimizer.py
src/optimizer_worker/: __init__.py  celery.sh  main.py  run_optimizer.py  worker.py
unit_test/: conftest.py  test_main.py  test_prefect_flow.py  test_worker_types.py
