[project]
name = "omotes-grow-worker"
version = "0.0.1"
authors = [{ name = "Sebastiaan la Fleur (TNO)", email = "sebastiaan.lafleur@tno.nl" }]
description = "Nieuwe Warmte Nu - Optimizer Worker"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "celery ~= 5.3.6",
    "jsonpickle ~= 3.0.2",
    "python-dotenv ~= 1.0.0",
    "rtc-tools-heat-network ~= 0.4.5"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
