[project]
name = "omotes-grow-worker"
dynamic = ["version"]
authors = [{ name = "Mark Vrijlandt", email = "mark.vrijlandt@tno.nl" }]
description = "Nieuwe Warmte Nu - Optimizer Worker"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = "==3.11.*"
dependencies = [
    "python-dotenv ~= 1.0.0",
    "mesido ~= 0.1.20.3",
    "omotes-sdk-python ~= 4.3.3",
    "prefect==3.7.3",
    "s3fs",
]

[project.optional-dependencies]
dev = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
    "pip-tools ~= 7.4.0",
    "black ~= 24.10.0",
    "flake8 == 7.1.1",
    "flake8-pyproject ~= 1.2.3",
    "flake8-docstrings ~= 1.7.0",
    "flake8-quotes ~= 3.4.0",
    "flake8-bugbear ~= 24.10.31",
    "flake8-mock ~= 0.4",
    "flake8-tuple ~= 0.4.1",
    "pytest ~= 8.3.4",
    "pytest-cov ~= 6.0.0",
    "mypy ~= 1.13.0",
    "isort == 5.13.2",
    "build ~= 1.2.2",
]


[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker"
changelog = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker/blob/main/CHANGELOG.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.pytest.ini_options]
addopts = "--cov=grow_worker --cov-report html --cov-report term-missing --cov-fail-under 35"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "DOC", # flake8-docstrings
]
ignore = [
    "D100", # Missing docstring in public module
    "D211", # no-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "D203", # 1 blank line required before class docstring
]

# [tool.mypy]
# python_version = "3.10"
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# exclude = ['.venv/*', 'venv/*', 'doc/*', 'ci/*']

# # mypy per-module options:
# [[tool.mypy.overrides]]
# module = "unit_test.*"
# check_untyped_defs = true
# ignore_missing_imports = true

# [[tool.mypy.overrides]]
# module = "mesido.*"
# ignore_missing_imports = true
