[project]
name = "omotes-grow-worker"
dynamic = ["version"]
authors = [{ name = "Mark Vrijlandt", email = "mark.vrijlandt@tno.nl" }]
description = "Nieuwe Warmte Nu - Optimizer Worker"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
readme = "README.md"
license = { file = "LICENSE" }

requires-python = "==3.11.*"
dependencies = [
    "python-dotenv ~= 1.0.0",
    "mesido ~= 0.1.20.3",
    "prefect==3.7.3",
    "pyesdl~=26.7",
    "s3fs",
    "streamcapture ~= 1.2.5",
]

[dependency-groups]
dev = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
    "pip-tools ~= 7.4.0",
    "ruff",
    "ty",
    "pytest ~= 8.3.4",
    "pytest-cov ~= 6.0.0",
    "build ~= 1.2.2",
]


[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker"
changelog = "https://github.com/Nieuwe-Warmte-Nu/optimizer-worker/blob/main/CHANGELOG.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 50"

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # pydocstyle
    "ANN", # flake8-annotations
    "DOC", # flake8-docstrings
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]
exclude = ["justfile", ".editorconfig"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/env.py" = [
    "DOC201", # Simple getter methods in EnvSettings use concise one-line docstrings.
]
